# etil

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  build-debug.sh  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  GenerateVersion.cmake
data/: builtins.til  help.til  mongodb-connections.json.example
data/auth-config/: keys.json.example  roles.json.example  users.json.example
deploy/production/: .env.example  docker-compose.prod.yml  nginx-production.conf
docs/: MLP.md
docs/claude-design/: 20260212-repl-design-changes.md  20260213-epic-snowbound2.md  20260214A-ETIL-Server-Security-Rules.md  20260218-tui-response-formatting.md  20260218A-docker-volume-file-io-design.md  (+64 more)
examples/: CMakeLists.txt  benchmark.cpp  mcp_server.cpp  multest-1000x1000-250-reps.til  simple_repl.cpp
examples/tui/: evolve-function.til  evolve-regression.til  evolve-sort.til  evolve.til  matrix-mongodb-loop-test.til  test_evolve.til  xor-mlp.til
scripts/: backup-workspace.sh  branch.sh  build-deps.sh  build-tui-deb.sh  build.sh  check-logging-policy.sh  clean.sh  deploy.sh  dev.sh  env.sh  github-push.sh  super-push.sh  test.sh  version-bump.sh
src/: CMakeLists.txt
src/aaa/: audit_log.cpp  user_store.cpp
src/core/: array_primitives.cpp  byte_primitives.cpp  compile_handlers.cpp  compiled_body.cpp  control_flow_handlers.cpp  dictionary.cpp  escape_processing.cpp  execution_context.cpp  execution_output_tee.cpp  heap_observable.cpp  interpret_handlers.cpp  interpreter.cpp  interpreter_bootstrap.cpp  json_primitives.cpp  logging.cpp  map_primitives.cpp  matrix_backend_blas.cpp  matrix_backend_eigen.cpp  matrix_primitives.cpp  metadata.cpp  metadata_json.cpp  observable_async.cpp  observable_execution.cpp  observable_primitives.cpp  pipeline_wait.cpp  primitives.cpp  sha256.cpp  string_primitives.cpp  version.cpp.in  word_impl.cpp
src/db/: mongo_client.cpp  mongo_primitives.cpp
src/evolution/: ast.cpp  ast_compiler.cpp  ast_genetic_ops.cpp  bridge_map.cpp  concept_dag.cpp  decompiler.cpp  evolution_engine.cpp  evolve_logger.cpp  fitness.cpp  genetic_ops.cpp  signature_index.cpp  stack_simulator.cpp  type_repair.cpp
src/fileio/: async_file_io.cpp  file_io_helpers.hpp  file_io_primitives.cpp  uv_session.cpp
src/lvfs/: lvfs.cpp  lvfs_primitives.cpp
src/manifold/: amqp_sink.cpp  broker_sink.cpp  broker_source.cpp  broker_source_factories.cpp  channel_name.cpp  clock.cpp  codec_resolver.cpp  default_service.cpp  dispatcher.cpp  nats_sink.cpp  origin.cpp  rbac.cpp  route_state.hpp  session_hmac.cpp  sinks.cpp  subject.cpp  til_primitives.cpp  transforms.cpp
src/mcp/: auth_config.cpp  http_transport.cpp  json_rpc.cpp  jwt_auth.cpp  mcp_server.cpp  mcp_sse_out_sink.cpp  oauth_github.cpp  oauth_google.cpp  resource_handlers.cpp  session.cpp  tool_handlers.cpp
src/net/: http_primitives.cpp  url_validation.cpp
src/selection/: selection_engine.cpp
tests/: CMakeLists.txt  test_paths.hpp.in
tests/docker/: amqp_subscriber.py  test_file_io_fuzz.py  test_file_io_fuzz.sh  test_file_io_stress.py  test_file_io_stress.sh  test_file_io_stress_py.sh  test_manifold_artemis.sh  test_manifold_nats.sh  test_mcp_file_io.sh  test_mcp_http.sh
tests/e2e/manifold/: README.md  broker_loopback_nats.til  local_loopback.til
tests/e2e/manifold/expected/: broker_loopback_nats.expected  local_loopback.expected
tests/e2e/manifold/harness/: run_e2e.py  run_e2e.sh
tests/til/: harness.til  mjd-test-01.til  mjd-test-02.til  mjd-test-03.til  mjd-test-04.til  test_abort.sh  test_builtins.sh  test_builtins.til  test_concept_dag.sh  test_concept_dag.til  test_create.sh  test_create.til  test_dump_see.sh  test_dump_see.til  test_evolve.sh  test_evolve.til  test_help.sh  test_help.til  test_json.sh  test_json.til  test_matrix.sh  test_matrix.til  test_mce.sh  test_mce.til  test_metadata.sh  test_metadata.til  test_mlp.sh  test_mlp.til  test_new_prims.sh  test_new_prims.til  test_observable.sh  test_observable.til  test_observable_async.sh  test_observable_async.til  test_pen_arrays.sh  test_pen_arrays.til  test_pen_bytes.sh  test_pen_bytes.til  test_pen_complex.sh  test_pen_complex.til  (+21 more)
tests/til/bench/: README.md  bench_dag_quad.til  bench_dag_tierb.til  bench_mce_monolithic.til  bench_mce_quad.til  bench_mce_tierb_chain.til  bench_mce_tierb_monolithic.til  bench_tbbp_cross_domain.til  bench_tbbp_quad.til  validate_mce.sh
tests/til/manifold-e2e/: manifold_loop.til  nats_loop.til
tests/til/string/: test_string_basic.sh  test_string_basic.til  test_string_regex.sh  test_string_regex.til  test_string_search.sh  test_string_search.til  test_string_split_join.sh  test_string_split_join.til  test_string_sprintf.sh  test_string_sprintf.til  test_string_substr_trim.sh  test_string_substr_trim.til
tests/unit/: test_aaa.cpp  test_array_primitives.cpp  test_ast_compiler.cpp  test_ast_genetic_ops.cpp  test_async_file_io.cpp  test_auth_config.cpp  test_bridge_map.cpp  test_byte_primitives.cpp  test_compiled_body.cpp  test_concept_dag.cpp  test_decompiler.cpp  test_dictionary.cpp  test_evolution.cpp  test_evolution_channels.cpp  test_evolvelogger_absorption.cpp  test_execution_context_channels.cpp  test_file_io_primitives.cpp  test_handler_sets.cpp  test_heap_objects.cpp  test_http_get.cpp  test_http_transport.cpp  test_interpreter.cpp  test_json_primitives.cpp  test_json_rpc.cpp  test_jwt_auth.cpp  test_logging.cpp  test_lvfs.cpp  test_manifold_amqp_sink.cpp  test_manifold_async_dispatch.cpp  test_manifold_broker_source.cpp  test_manifold_codecs.cpp  test_manifold_cycle.cpp  test_manifold_dispatcher_stats.cpp  test_manifold_echo.cpp  test_manifold_integration.cpp  test_manifold_integration_phase34.cpp  test_manifold_loop_registry.cpp  test_manifold_loop_til.cpp  test_manifold_loop_til_file.cpp  test_manifold_loopback.cpp  (+32 more)
(+138 files in other folders)
